[package]
name = "saintnosub-bot"
version = "1.2.0"
authors = ["Lemiort <lemiort@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
tokio = { version =  "0.2.22", features = ["rt-threaded", "macros"] }
roux = "1.1.1"
regex = "1"
rand = "0.7.3"
tbot = "0.6"

log = "0.4.11"
pretty_env_logger = "0.4.0"