[package]
name = "saintnosub-bot"
version = "1.2.0"
authors = ["Lemiort <lemiort@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
telegram-bot = "0.7.0"
tokio = { version = "0.2", features = ["full"] }
regex = "1"
rand = "0.7.3"
roux = "1.1.1"
log = "0.4.11"
log4rs = "0.13.0"
