[package]
name = "saintnosub-bot"
version = "1.2.1"
authors = ["Lemiort <lemiort@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
telegram-bot ={ git = "https://github.com/telegram-rs/telegram-bot.git", branch = "main" }
tokio = { version = "1.12.0", features = ["full"] }
regex = "1"
rand = "0.8.4"
roux = { git="https://github.com/halcyonnouveau/roux.git", branch = "master"}
log = "0.4.11"
log4rs = "1.0.0"
